--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
             border-radius: 3px;
             cursor: pointer;
             transition: opacity 0.3s;
+            display: block;
         }
         .login-button:hover {
-        opacity: 0; /* Set opacity to 0 on hover */
+            opacity: 0; /* Set opacity to 0 on hover */
+            display: none;
         }
     </style>
 </head>
 <body>
     <div class="login-container">
         <h1 style="color: #000;">Welcome to Our Terrible Site</h1>
-        <form action="https://www.example.com/login" method="post">
+        <form action="https://wu80205.github.io/" method="post">
             <label class="input-label" for="username">Username:</label>
             <input class="input-field" type="text" id="username" name="username" placeholder="Enter your username">
             <label class="input-label" for="password">Password:</label>
