--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             border-radius: 3px;
             cursor: pointer;
             transition: opacity 0.3s;
-            display: block;
+            pointer-events: none;
+            cursor: not-allowed;
         }
         .login-button:hover {
             opacity: 0; /* Set opacity to 0 on hover */
-            display: none;
         }
     </style>
 </head>
