--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Letter Rain</title>
     <style>
         body {
             margin: 0;
@@ -41,12 +41,5 @@
             }, animationDuration * 1000);
         });
     </script>
-
-    <form action="https://wu80205.github.io" method="post">
-            <label class="input-label" for="username">Username:</label>
-            <input class="input-field" type="text" id="username" name="username" placeholder="Enter your username">
-            <label class="input-label" for="password">Password:</label>
-            <input class="input-field" type="password" id="password" name="password" placeholder="Enter your password">
-    </form>
 </body>
 </html>
