--- a/index.html
+++ b/index.html
@@ -3,43 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Letter Rain</title>
+    <title>Plinko Login Form</title>
     <style>
+        /* Add your own styling here */
         body {
-            margin: 0;
-            overflow: hidden;
             font-family: Arial, sans-serif;
+            text-align: center;
         }
-        .letter {
-            position: absolute;
-            font-size: 20px;
-            color: #00f;
+        #plinko-board {
+            /* Your Plinko board styling */
+        }
+        #username-slot, #password-slot {
+            /* Styling for username and password slots */
         }
     </style>
 </head>
 <body>
+    <h1>Plinko Login Form</h1>
+    <input type="text" id="username-input" placeholder="Enter your username">
+    <div id="plinko-board">
+        <!-- Plinko board with pegs -->
+        <!-- You can create this using CSS or SVG -->
+    </div>
+    <div id="username-slot">Username Slot</div>
+    <div id="password-slot">Password Slot</div>
+
     <script>
-        document.addEventListener("keydown", (event) => {
-            const letter = event.key;
-            const leftPosition = Math.random() * window.innerWidth;
-            const topPosition = -20; // Start from above the viewport
-            const letterElement = document.createElement("div");
-            letterElement.classList.add("letter");
-            letterElement.textContent = letter;
-            letterElement.style.left = `${leftPosition}px`;
-            letterElement.style.top = `${topPosition}px`;
-            document.body.appendChild(letterElement);
+        // JavaScript logic for Plinko interaction
+        const usernameInput = document.getElementById('username-input');
+        const usernameSlot = document.getElementById('username-slot');
+        const passwordSlot = document.getElementById('password-slot');
 
-            // Animate the falling letter
-            const animationDuration = Math.random() * 3 + 2; // Random duration between 2 and 5 seconds
-            letterElement.style.transition = `top ${animationDuration}s linear`;
-            letterElement.style.top = `${window.innerHeight}px`;
-
-            // Remove the letter after animation completes
-            setTimeout(() => {
-                document.body.removeChild(letterElement);
-            }, animationDuration * 1000);
+        // Event listener for input changes
+        usernameInput.addEventListener('input', () => {
+            // Update the letters falling from the top
+            // You can animate these letters using CSS transitions
+            const letters = usernameInput.value.split('');
+            // Simulate Plinko randomness
+            const randomIndex = Math.floor(Math.random() * letters.length);
+            const randomLetter = letters[randomIndex];
+            // Display the random letter on the Plinko board
+            // (You can create a visual representation for this)
+            console.log(`Random letter: ${randomLetter}`);
         });
+
+        // Event listener for successful login (when letters match)
+        // You'll need to implement this based on your actual authentication logic
+        function handleSuccessfulLogin() {
+            console.log('Login successful!');
+            // Redirect to the user's dashboard or homepage
+            // window.location.href = 'dashboard.html';
+        }
     </script>
 </body>
 </html>
