--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             /* Your Plinko board styling */
         }
         #username-slot, #password-slot {
-            /* Styling for username and password slots */
+            color: #ffffff;
+            border: 1px solid black;
         }
     </style>
 </head>
