--- a/index.html
+++ b/index.html
@@ -52,9 +52,24 @@
         };
 
         // Example: Create some pegs
-        makePeg(100, 200); // Adjust coordinates as needed
+        makePeg(100, 200);
         makePeg(200, 200);
         makePeg(300, 200);
+        makePeg(400, 200);
+        makePeg(500, 200);
+        makePeg(600, 200);
+        makePeg(100, 250);
+        makePeg(200, 250);
+        makePeg(300, 250);
+        makePeg(400, 250);
+        makePeg(500, 250);
+        makePeg(600, 250);
+        makePeg(100, 300);
+        makePeg(200, 300);
+        makePeg(300, 300);
+        makePeg(400, 300);
+        makePeg(500, 300);
+        makePeg(600, 300);
         // ... Add more pegs ...
 
         // Create falling letters (disk)
