--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         // Run the renderer
         Render.run(render);
     </script>
+    <p height="800"></p>
     <button onclick="addLetter('A')">A</button>
     <button onclick="addLetter('B')">B</button>
 </body>
