--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             World.add(engine.world, peg);
         };
 
-        const box = Bodies.rectangle(canvasWidth / 2, canvasHeight - 20, 200, 40) {
+        const box = Bodies.rectangle(canvasWidth / 2, canvasHeight - 20, 200, 40 {
             isStatic: true,
             render: {
                 fillStyle: 'rgba(255, 0, 0, 0.5)' // Customize the box color
